<resources>
    <string name="app_name" translatable="false">WeatherApp</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="home_second" translatable="false">Home Second</string>

    <string name="settings_WT">Change weather type?</string>
    <string name="settings_WTT">* From C to K</string>

    <string name="menu_weather">Weather</string>
    <string name="menu_add">Add city</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_history">History</string>

    <string name="good_day">Good day!</string>
    <string name="WeatherApp">Weather Application</string>
    <string name="Date">2020</string>

    <string name="DefaultValue">" "</string>
    <string name="TempValue">0</string>
    <string name="TempC"> C</string>
    <string name="TempF"> K</string>
    <string name="Fail">Fail</string>

    <string name="City">City</string>
    <string name="Enter">Enter</string>

    <string name="ButtonAdd">Add</string>
    <string name="Button_yes">Yes</string>
    <string name="Button_no">No</string>

    <string name="WT_Clear">Clear</string>

    <string name="WP_Pressure">"Pressure: "</string>
    <string name="WP_Wind">"Wind: "</string>
    <string name="WP_Humidity">"Humidity: "</string>

    <string name="Data_Max_Temp">"Max"</string>
    <string name="Data_Min_Temp">"Min"</string>
    <string name="Data_Pressure">" mm"</string>
    <string name="Data_Wind">" m/s"</string>
    <string name="Data_Humidity">" %"</string>
    <string name="icon">icon</string>
    <string name="ChoseCity">"Chose city: "</string>

    <string name="Toast_restore">Last: </string>

    <string name="Broad_Airplane">Airplane mode is on!</string>
    <string name="ButtonGeo">Geo search</string>
    <string name="google_maps_key">google_maps_key</string>
</resources>
