<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.alexbox.weatherapp.ui.home.HomeFragment"
        android:label="@string/menu_weather"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>

    <fragment
        android:id="@+id/nav_home_second"
        android:name="ru.alexbox.weatherapp.ui.home.HomeFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
        <action
            android:id="@+id/action_nav_home_second_to_nav_gallery"
            app:destination="@id/nav_gallery" />
        <action
            android:id="@+id/action_nav_home_second_to_nav_slideshow"
            app:destination="@id/nav_slideshow" />
    </fragment>

    <activity
        android:id="@+id/nav_gallery"
        android:name="ru.alexbox.weatherapp.CityActivity"
        android:label="@string/menu_add"
        tools:layout="@layout/activity_city" />

    <activity
        android:id="@+id/nav_slideshow"
        android:name="ru.alexbox.weatherapp.HistoryActivity"
        android:label="@string/menu_history"
        tools:layout="@layout/activity_history" />
</navigation>