<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nav_bar"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:id="@+id/InfoLayout"
        android:layout_width="185dp"
        android:layout_height="98dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08">

        <TextView
            android:id="@+id/CityView"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:text="@string/City"
            android:textColor="@color/colorTextDefault"
            android:textSize="@dimen/textSizeB"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/WeatherView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/WT_Clear"
            android:textColor="@color/colorTextDefault"
            android:textSize="@dimen/textSizeS"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/TempLayout"
        android:layout_width="102dp"
        android:layout_height="65dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.249">

        <TextView
            android:id="@+id/TempView"
            android:layout_width="60dp"
            android:layout_height="63dp"
            android:gravity="center"
            android:text="@string/TempValue"
            android:textColor="@color/colorTextDefault"
            android:textSize="45sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TempTypeView"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:text="@string/TempC"
            android:textColor="@color/colorTextDefault"
            android:textSize="45sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ParamLayout"
        android:layout_width="349dp"
        android:layout_height="186dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.741"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922">

        <LinearLayout
            android:id="@+id/HorizontalL"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <LinearLayout
                android:id="@+id/ParLayout"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/PressureView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/WP_Pressure"
                    android:textColor="@color/colorTextDefault"
                    android:textSize="@dimen/textSizeS"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/WindView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/WP_Wind"
                    android:textColor="@color/colorTextDefault"
                    android:textSize="@dimen/textSizeS"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/HumidityView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/WP_Humidity"
                    android:textColor="@color/colorTextDefault"
                    android:textSize="@dimen/textSizeS"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ParLayout2"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/PressureViewP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/DefaultValue"
                    android:textColor="@color/colorTextDefault"
                    android:textSize="@dimen/textSizeS"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/WindViewP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/DefaultValue"
                    android:textColor="@color/colorTextDefault"
                    android:textSize="@dimen/textSizeS"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/HumidityViewP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/DefaultValue"
                    android:textColor="@color/colorTextDefault"
                    android:textSize="@dimen/textSizeS"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ParLayout3"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Data_Pressure"
                    android:textColor="@color/colorTextDefault"
                    android:textSize="@dimen/textSizeS"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Data_Wind"
                    android:textColor="@color/colorTextDefault"
                    android:textSize="@dimen/textSizeS"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Data_Humidity"
                    android:textColor="@color/colorTextDefault"
                    android:textSize="@dimen/textSizeS"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/AnimationView"
        android:layout_width="0dp"
        android:layout_height="142dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/cloydys"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.436"
        app:srcCompat="@drawable/cloydys" />

</androidx.constraintlayout.widget.ConstraintLayout>