<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorCloud">

    <TextView
        android:id="@+id/fsdView"
        android:layout_width="274dp"
        android:layout_height="50dp"
        android:text="@string/menu_settings"
        android:textColor="@color/colorTextDefault"
        android:textSize="@dimen/textSizeB"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.218" />

    <TextView
        android:id="@+id/fsdView2"
        android:layout_width="274dp"
        android:layout_height="40dp"
        android:text="@string/settings_WT"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="@dimen/textSizeS"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.314" />

    <TextView
        android:id="@+id/fsdView3"
        android:layout_width="274dp"
        android:layout_height="40dp"
        android:text="@string/settings_WTT"
        android:textColor="@color/colorTextDefault"
        android:textSize="@dimen/textSizeS"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.371" />

</androidx.constraintlayout.widget.ConstraintLayout>